--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorDarkerGrey">#2E2E2E</color>
+    <color name="colorDarkGrey">#404040</color>
+    <color name="colorLightGrey">#8C8C8C</color>
 </resources>
