--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".views.MainActivity">
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/mcrdBalanceAmountNOtesSection"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,17 +31,39 @@
                 android:textSize="@dimen/sp36"
                 app:fontFamily="@font/ibm_plex_sans_semibold"
                 android:includeFontPadding="false"
-                android:layout_margin="@dimen/dp10"
+                android:layout_margin="@dimen/dp16"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
+                android:id="@+id/tietAmountToWithdrawInput"
+                android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                style="@style/CustomHomeScreenEditText"/>
+                style="@style/CustomHomeScreenEditText"
+                android:hint="@string/txt_enter_amount_hint"/>
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/mcrdSubmitInput"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintWidth_percent="0.15"
+                app:layout_constraintHeight_percent="0.15"
+                app:layout_constraintStart_toEndOf="@id/tietAmountToWithdrawInput"
+                app:layout_constraintTop_toTopOf="@+id/tietAmountToWithdrawInput"
+                app:layout_constraintBottom_toBottomOf="@id/tietAmountToWithdrawInput"
+                android:layout_marginStart="@dimen/dp16"
+                app:cardBackgroundColor="@color/colorDarkGrey"
+                app:cardCornerRadius="@dimen/dp16">
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_arrow_submit"
+                    android:layout_gravity="center"/>
+
+            </com.google.android.material.card.MaterialCardView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
