--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -35,7 +35,9 @@
         <item name="android:singleLine">true</item>
         <item name="android:inputType">number</item>
         <item name="android:imeOptions">actionDone</item>
-        <item name="android:layout_margin">@dimen/dp20</item>
+        <item name="android:layout_margin">@dimen/dp40</item>
+        <item name="android:paddingHorizontal">@dimen/dp16</item>
+        <item name="layout_constraintWidth_percent">0.64</item>
         <item name="layout_constraintHeight_percent">0.15</item>
     </style>
 
