--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,15 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/mcrdBalanceAmountNOtesSection"
+        style="@style/CustomHomeScreenCardAppearance"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:cardPreventCornerOverlap="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.56"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.48"
-        app:shapeAppearanceOverlay="@style/CustomHomeScreenCardAppearanceOverlay"
-        style="@style/CustomHomeScreenCardAppearance"
-        app:cardPreventCornerOverlap="false">
+        app:shapeAppearanceOverlay="@style/CustomHomeScreenCardAppearanceOverlay">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -26,42 +26,52 @@
                 android:id="@+id/mtxtTotalAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="4000"
+                android:layout_margin="@dimen/dp16"
+                android:includeFontPadding="false"
                 android:textColor="@color/colorLightGrey"
                 android:textSize="@dimen/sp36"
                 app:fontFamily="@font/ibm_plex_sans_semibold"
-                android:includeFontPadding="false"
-                android:layout_margin="@dimen/dp16"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="4000" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcycDenominationNoOfNotesList"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toTopOf="@id/tietAmountToWithdrawInput"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/mtxtTotalAmount"
+                android:layout_margin="@dimen/dp16"/>
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/tietAmountToWithdrawInput"
+                style="@style/CustomHomeScreenEditText"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintStart_toStartOf="parent"
+                android:hint="@string/txt_enter_amount_hint"
                 app:layout_constraintBottom_toBottomOf="parent"
-                style="@style/CustomHomeScreenEditText"
-                android:hint="@string/txt_enter_amount_hint"/>
+                app:layout_constraintStart_toStartOf="parent" />
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/mcrdSubmitInput"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintWidth_percent="0.15"
+                android:layout_marginStart="@dimen/dp16"
+                app:cardBackgroundColor="@color/colorDarkGrey"
+                app:cardCornerRadius="@dimen/dp16"
+                app:layout_constraintBottom_toBottomOf="@id/tietAmountToWithdrawInput"
                 app:layout_constraintHeight_percent="0.15"
                 app:layout_constraintStart_toEndOf="@id/tietAmountToWithdrawInput"
                 app:layout_constraintTop_toTopOf="@+id/tietAmountToWithdrawInput"
-                app:layout_constraintBottom_toBottomOf="@id/tietAmountToWithdrawInput"
-                android:layout_marginStart="@dimen/dp16"
-                app:cardBackgroundColor="@color/colorDarkGrey"
-                app:cardCornerRadius="@dimen/dp16">
+                app:layout_constraintWidth_percent="0.15">
 
                 <com.google.android.material.imageview.ShapeableImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_arrow_submit"
-                    android:layout_gravity="center"/>
+                    android:layout_gravity="center"
+                    app:srcCompat="@drawable/ic_arrow_submit" />
 
             </com.google.android.material.card.MaterialCardView>
 
