--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -41,4 +41,9 @@
         <item name="layout_constraintHeight_percent">0.15</item>
     </style>
 
+    <style name="DenominationNoOfNotesBadgeAppearanceOverlay" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
+
 </resources>
