--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="colorDarkerGrey">#2E2E2E</color>
     <color name="colorDarkGrey">#404040</color>
     <color name="colorLightGrey">#8C8C8C</color>
+    <color name="colorGrey">#808080</color>
+    <color name="colorPrimary">#FF8A80</color>
 </resources>
